<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/pedu1" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittextshapelogin"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/youremail"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittextshapelogin"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/yourpassword"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btnshapelogin"
        android:gravity="center"
        android:text="@string/btnlogin"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:text="@string/checkboxrememberme"
        android:textSize="18sp"
        android:visibility="visible"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/tvregister"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/tvforgetpass"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>